2003-02-20  Daniel Steffen  <das@users.sourceforge.net>

	* library/console.tcl: (aqua & macintosh) added missing <Cmd-q>
	binding for corresponding Quit menu item shortcut.

	* macosx/README: updated instructions for embedded build, 
	added various improvements by Russell Owen.

	* unix/tcl.m4: update from Tcl.
	* unix/configure: regen.

2003-02-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinScrlbr.c (UpdateScrollbar): use SIF_DISABLENOSCROLL to
	"disable" scrollbar when on Windows when there is nothing to
	scroll.  This is Windows style, and fixes [Bug #624116].

	* tests/panedwindow.test: 
	* generic/tkPanedWindow.c (ValidSashIndex): corrected to note that
	2 panes must exist before any one sash does. [tcllib Bug #689258]

2003-02-20  Peter Spjuth  <peter.spjuth@space.se>

	* tests/panedwindow.test:
	* generic/tkPanedWindow.c: Fixed calculation of the last slave's
	size when increasing the size of the panedwindow. [Bug #689099]

2003-02-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImgGIF.c (GetDataBlock): Removed pointless static
	variable ZeroDataBlock [Bug #664788]

	* unix/tkUnixFont.c (CanUseFallback): Added argument, passed
	through from callers to FindSubFontForChar(), so that pointers
	into the old subfont table to be updated when that table is
	reallocated, avoiding a (sometimes fatal) FMR.
	[Bugs #618872 and #689357]

2003-02-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXKeyEvent.c: fix for uninitialized var warning.

2003-02-19  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXMouseEvents.c (GeneratePollingEvents): In the case
	where there was a capture window, we were sending the events to
	the capture window.  But the capture window (return value or
	TkMacOSXGetCapture) is always a toplevel.  So this is wrong in 
	the case that the Event's toplevel IS the capture window - in
	which case the event should go to the subwindow most closely
	containing the event.
	